--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/rust
 {
-    "name": "shift2sdv",
+    "name": "Shift to SDV devcontainer",
     "build": {
         "dockerfile": "Dockerfile",
         "target": "dev"
@@ -10,8 +10,7 @@
    "runArgs": [
 	"--privileged"
    ],
-   // Auto forward the Web IVI port
-   "appPort": ["5500:5500"],
+   "appPort": ["25551:25551"],
 	// Configure tool-specific properties.
 	"customizations": {
 		// Configure properties specific to VS Code.
@@ -19,24 +18,15 @@
 			// Set *default* container specific settings.json values on container create.
 			"settings": {
 			},
+			
 			// Add the IDs of extensions you want installed when the container is created.
 			"extensions": [
 				"eamodio.gitlens",
-				"redhat.vscode-yaml",
-                "streetsidesoftware.code-spell-checker",
-                "jebbs.plantuml",
-                "ms-python.python",
-                "ms-python.vscode-pylance",
-                "ms-python.debugpy",
-                "yzhang.markdown-all-in-one",
-                "zxh404.vscode-proto3",
-                "bierner.markdown-preview-github-styles",
-                "hediet.vscode-drawio"
+				"redhat.vscode-yaml"
 				// Extend IDs of extensions here for custom dev environment...
 			]
 		}
 	},
    "workspaceMount": "source=${localWorkspaceFolder},target=/workspaces/shift2sdv/,type=bind",
-   "workspaceFolder": "/workspaces/shift2sdv/",
-   "remoteUser": "ankaios"
+   "workspaceFolder": "/workspaces/shift2sdv/"
 }
