--- a/shift2sdv_manifest.yaml
+++ b/shift2sdv_manifest.yaml
@@ -47,3 +47,17 @@ workloads:
     runtimeConfig: |
       image: ghcr.io/eclipse-sdv-hackathon-chapter-two/shift2sdv/web_ivi:latest
       commandOptions: [ "--net=host", "--ipc=host"]
+  workload_starter:
+    runtime: podman
+    agent: hpc1
+    restartPolicy: NEVER
+    runtimeConfig: |
+      image: ghcr.io/eclipse-sdv-hackathon-chapter-two/shift2sdv/workload_starter:latest
+      commandOptions: [ "--net=host", "-e", "VIN=42", "-e", "MQTT_BROKER_ADDR=3345d71141b94f0eb2ec8c60a153d4d3.s1.eu.hivemq.cloud", "-e", "MQTT_BROKER_PORT=8884", "-e", "MQTT_BROKER_USER=hackathon", "-e", "MQTT_BROKER_PASS=CaliperKing7"]
+    controlInterfaceAccess:
+      allowRules:
+        - type: StateRule
+          operation: ReadWrite
+          filterMask:
+            - "desiredState"
+            - "workloadStates"
