renamed workload_starter, removed unused apps

--- a/shift2sdv_manifest.yaml
+++ b/shift2sdv_manifest.yaml
@@ -20,26 +20,6 @@ workloads:
             filterMask:
               - "desiredState"
               - "workloadStates"
-  symphony_provider:
-    runtime: podman
-    agent: hpc1
-    controlInterfaceAccess:
-      allowRules:
-        - type: StateRule
-          operation: ReadWrite
-          filterMask:
-            - "*"
-    restartPolicy: NEVER
-    runtimeConfig: |
-      image: ghcr.io/eclipse-sdv-hackathon-chapter-two/shift2sdv/symphony_provider:latest
-      commandOptions: [ "--net=host", "-e", "VIN=42"]
-  example_app:
-    runtime: podman
-    agent: hpc2
-    restartPolicy: NEVER
-    runtimeConfig: |
-      image: ghcr.io/eclipse-sdv-hackathon-chapter-two/shift2sdv/example_app:latest
-      commandOptions: [ "--net=host", "-e", "VIN=42"]
   web_ivi:
     runtime: podman
     agent: hpc2
@@ -47,12 +27,12 @@ workloads:
     runtimeConfig: |
       image: ghcr.io/eclipse-sdv-hackathon-chapter-two/shift2sdv/web_ivi:latest
       commandOptions: [ "--net=host", "--ipc=host"]
-  workload_starter:
+  workload_administrator:
     runtime: podman
     agent: hpc1
     restartPolicy: NEVER
     runtimeConfig: |
-      image: ghcr.io/eclipse-sdv-hackathon-chapter-two/shift2sdv/workload_starter:latest
+      image: ghcr.io/eclipse-sdv-hackathon-chapter-two/shift2sdv/workload_administrator:latest
       commandOptions: [ "--net=host", "-e", "VIN=42", "-e", "MQTT_BROKER_ADDR=3345d71141b94f0eb2ec8c60a153d4d3.s1.eu.hivemq.cloud", "-e", "MQTT_BROKER_PORT=8884", "-e", "MQTT_BROKER_USER=hackathon", "-e", "MQTT_BROKER_PASS=CaliperKing7"]
     controlInterfaceAccess:
       allowRules:
