--- a/apps/workload_administrator/Dockerfile
+++ b/apps/workload_administrator/Dockerfile
@@ -5,6 +5,6 @@ WORKDIR /usr/src/app
 COPY requirements.txt ./
 RUN pip install --break-system-packages --no-cache-dir -r requirements.txt
 
-COPY app.py ./
+COPY *.py ./
 
-CMD [ "python3", "-u", "./app.py" ]
+CMD [ "python3", "-u", "./main.py" ]
