--- a/backend/reports-backend/requirements.txt
+++ b/backend/reports-backend/requirements.txt
@@ -2,9 +2,9 @@ flask-restful==0.3.10
 flask==3.1.0
 paho-mqtt==2.1.0
 # Dependencies for labeling
-torch==2.5.1
-opencv-python==4.10.0.84
-pandas==2.2.3
-requests==2.32.3
-Pillow==11.0.0
-numpy==2.1.3
+# torch==2.5.1
+# opencv-python==4.10.0.84
+# pandas==2.2.3
+# requests==2.32.3
+# Pillow==11.0.0
+# numpy==2.1.3
