--- a/shift2sdv_manifest.yaml
+++ b/shift2sdv_manifest.yaml
@@ -2,7 +2,7 @@ apiVersion: v0.1
 workloads:
   Ankaios_Dashboard:
     runtime: podman
-    agent: agent_A
+    agent: hpc1
     restart: true
     updateStrategy: AT_LEAST_ONCE
     accessRights:
@@ -20,17 +20,24 @@ workloads:
           filterMask:
             - "desiredState"
             - "workloadStates"
-  web_ivi:
+  workload_administrator:
     runtime: podman
-    agent: hpc2
+    agent: hpc1
     restartPolicy: NEVER
     runtimeConfig: |
-      image: ghcr.io/eclipse-sdv-hackathon-chapter-two/shift2sdv/web_ivi:latest
-      commandOptions: [ "--net=host", "--ipc=host"]
-  log_publisher_app:
-    runtime: podman
-    agent: hpc2
-    restartPolicy: NEVER
-    runtimeConfig: |
-      image: ghcr.io/eclipse-sdv-hackathon-chapter-two/shift2sdv/log_publisher_app:latest
-      commandOptions: [ "--net=host", "--ipc=host", "-e", "THRESHOLD_VALUE=2.25"]
+      image: docker.io/sboettdev/caliperkings_workload_administrator:latest
+      commandOptions: [ "--net=host", "-e", "VIN=42", "-e", "MQTT_BROKER_ADDR=3345d71141b94f0eb2ec8c60a153d4d3.s1.eu.hivemq.cloud", "-e", "MQTT_BROKER_PORT=8884", "-e", "MQTT_BROKER_USER=hackathon", "-e", "MQTT_BROKER_PASS=CaliperKing7"]
+    controlInterfaceAccess:
+      allowRules:
+        - type: StateRule
+          operation: ReadWrite
+          filterMask:
+            - "desiredState"
+            - "workloadStates"
+#  log_publisher_app:
+#    runtime: podman
+#    agent: hpc2
+#    restartPolicy: NEVER
+#    runtimeConfig: |
+#      image: ghcr.io/eclipse-sdv-hackathon-chapter-two/shift2sdv/log_publisher_app:latest
+#      commandOptions: [ "--net=host", "--ipc=host", "-e", "THRESHOLD_VALUE=2.25"]
