--- a/backend/reports-backend/requirements.txt
+++ b/backend/reports-backend/requirements.txt
@@ -1,6 +1,7 @@
 flask-restful==0.3.10
 flask==3.1.0
 paho-mqtt==2.1.0
+pytest==8.3.3
 # Dependencies for labeling
 # torch==2.5.1
 # opencv-python==4.10.0.84
